Pipeline de coleta de dados com API e Scrap funcional

--- a/notebooks/data_collect.ipynb
+++ b/notebooks/data_collect.ipynb
@@ -31,6 +31,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b303833d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install tqdm"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fa5034a2",
    "metadata": {},
@@ -503,7 +513,6 @@
     "\n",
     "- Requerimentos, temos o link do requerimento associado ao evento\n",
     "- Pautas: Podemos ter um sumário diferente ao que o evento se refere, nas pautas também podemos encontrar os convidades e representantes necessários para o evento.\n",
-    "- Outras informações interessantes como ementa, status da proposição, tipo.\n",
     "\n",
     "A informação de convidados pelo que é visto ao acessar os documentos é repetida em ambos, porém alguns eventos não possuem requerimento, apenas pauta.\n",
     "\n",
