--- a/notebooks/business_and_data_understanding.ipynb
+++ b/notebooks/business_and_data_understanding.ipynb
@@ -1111,7 +1111,10 @@
     "- Requerimentos com PDFs e textos extraídos.\n",
     "\n",
     "\n",
-    "Após extrairmos as informações com os scripts iremos realizar a etapa de EDA em um notebook separado. Como há um processamento de PDFs e múltiplos arquivos. Iremos primeiro gerar um CSV com esses dados para depois apenas explorarmos."
+    "Após extrairmos as informações com os scripts iremos realizar a etapa de EDA em um notebook separado. Como há um processamento de PDFs e múltiplos arquivos. Iremos primeiro gerar um CSV com esses dados para depois apenas explorarmos.\n",
+    "\n",
+    "\n",
+    "Para isso iremos executar o script `get_data.py`."
    ]
   }
  ],
