--- a/notebooks/modeling_evaluation.ipynb
+++ b/notebooks/modeling_evaluation.ipynb
@@ -634,7 +634,7 @@
     "| | Ementa (LLM) | **0.750** | 0.500 | **0.750** | 0.500 |\n",
     "| | PDF (LLM) | **1.000** | **1.000** | **1.000** | 0.250 |\n",
     "\n",
-    "O melhor modelo de embeddings utilizado foi o bge-m3, ele demonstrou um desempenho superior até mesmo comparado ao inicialmente idealizado (BERTimbau).\n",
+    "O melhor modelo de embeddings utilizado foi o bge-m3, ele demonstrou um desempenho superior até mesmo comparado ao inicialmente idealizado (BERTimbau). Porém mesmo com o desempenho melhor, ainda vamos optar pelo uso do BERTimbau (portuguese-bert), principalmente no que tange a performance e velocidade da geração tanto dos embeddings, quanto da predição. Este ficou em segundo lugar em termos de métricas, porém sua velocidade para a criação de embeddings, provavelmente devido a possuir menos dimensões da rede neural tornam o uso mais agradável.\n",
     "\n",
     "Temos também que o texto completo do requerimento em PDF se sobressai sobre o uso apenas da ementa isso sugere que, para este tipo de documento, a ementa pode ser muito concisa direta, sem muitos detalhes. O texto completo, apesar de ter mais \"ruidos\" e jargões técnicos, fornece um contexto semântico muito melhor para o modelo de embedding, resultando em uma busca mais precisa.\n",
     "\n",
